--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 title: Home
-use-site-title: true
 ---
 
 <div class="container-fluid" role="main">
@@ -9,6 +8,11 @@ use-site-title: true
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <header class="header-section">
         <div class="intro-header no-img">
+          <h1>{% if page.title %}{{ page.title }}{% else %}<br/>{% endif %}</h1>
+            {% if page.subtitle %}
+              <hr class="small">
+              <span class="page-subheading">{{ page.subtitle }}</span>
+            {% endif %}
         </div>
       </header>
       <div class="posts-list">
