--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@ title: Home
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <header class="header-section">
         <div class="intro-header no-img">
-          <h1>{% if page.title %}{{ page.title }}{% else %}<br/>{% endif %}</h1>
-            {% if page.subtitle %}
-              <hr class="small">
-              <span class="page-subheading">{{ page.subtitle }}</span>
-            {% endif %}
+          <div class="page-heading">
+            <h1>{% if page.title %}{{ page.title }}{% else %}<br/>{% endif %}</h1>
+              {% if page.subtitle %}
+                <hr class="small">
+                <span class="page-subheading">{{ page.subtitle }}</span>
+              {% endif %}
+          </div>
         </div>
       </header>
       <div class="posts-list">
