--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@ title: Home
       <header class="header-section">
         <div class="intro-header no-img">
           <div class="page-heading">
-            <h1>{% if page.title %}{{ page.title }}{% else %}<br/>{% endif %}</h1>
-              {% if page.subtitle %}
+            <h1>site.title</h1>
+              {% if site.subtitle %}
                 <hr class="small">
-                <span class="page-subheading">{{ page.subtitle }}</span>
+                <span class="page-subheading">{{ site.subtitle }}</span>
               {% endif %}
           </div>
         </div>
