--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Home
       <header class="header-section">
         <div class="intro-header no-img">
           <div class="page-heading">
-            <h1>site.title</h1>
+            <h1>{{ site.title }}</h1>
               {% if site.subtitle %}
                 <hr class="small">
                 <span class="page-subheading">{{ site.subtitle }}</span>
