--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@ title: Home
         <div class="intro-header no-img">
           <div class="page-heading">
             <h1>{{ site.title }}</h1>
-              {% if site.subtitle %}
-                <hr class="small">
-                <span class="page-subheading">{{ site.subtitle }}</span>
-              {% endif %}
+            <hr class="small">
+            <span class="page-subheading">{{ site.description }}</span>
           </div>
         </div>
       </header>
