--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@ title: Home
         <div class="intro-header no-img">
           <div class="page-heading">
             <h1>{{ site.title }}</h1>
+            <a href="{{ site.author.url }}">
+              <img src="{{ site.baseurl }}/img/allied_logo.jpg" class="profile-picture" width="256">
+            </a>
             <hr class="small">
             <span class="page-subheading">{{ site.description }}</span>
           </div>
