--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@ title: Home
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <header class="header-section">
         <div class="intro-header no-img">
+          <div class="page-heading">
+            <h1>{{ site.title }}</h1>
+            <a href="{{ site.author.url }}">
+              <img src="{{ site.baseurl }}/img/allied_logo.jpg" class="profile-picture" width="256">
+            </a>
+            <hr class="small">
+            <span class="page-subheading">{{ site.description }}</span>
+          </div>
         </div>
       </header>
       <div class="posts-list">
